--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
     list-style: none;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(5,auto-fit);
-    grid-gap: 10px;
+    gap: 0px 10px;
     background-color: #ff3131;
     font-family: "Playfair Display", serif;
     position: relative;
@@ -114,6 +114,7 @@ figcaption {
     }
     .overlay img {
         width: 100%;
+        height: 75%;
     }
 }
 /* animation */
